--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>PowerBI 入门 | by Jeorch czhang@data-pharbers</title>
     <meta name="description" content="Explore impress.js in 3D" />
     <meta name="author" content="Henrik Ingo" />
-    <link href="..\..\css\impress-common.css" rel="stylesheet" />
+    <link href="css/impress-common.css" rel="stylesheet" />
     <link href="css/3D-rotations.css" rel="stylesheet" />
 </head>
 
@@ -118,7 +118,7 @@
 <div id="impress-toolbar"></div>
 <div id="impress-help"></div>
 
-<script type="text/javascript" src="../../js/impress.js"></script>
+<script type="text/javascript" src="js/impress.js"></script>
 <script>impress().init();</script>
 
 </body>
