--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     </div>
     <div id="overview2" class="step overview" data-x="2018" data-y="106" data-z="3018" data-scale="2">
          <p>谈到商业智能（BI）分析软件时，两个主要的行业领导者： <br>Power BI 和 Tableau。<br><br>
-           Power BI 和 Tableau 都提供了强大的可视化，在模板方面，Power BI提供29种标准视觉效果，而Tableau在其Show Me功能中提供24种。<br><br>
-           但这不是一场数字游戏。两种服务的标准视觉效果的元素可以组合和修改，从而导致数千种组合。
+           为什么要使用 Power BI ？<br>
+           有哪些角色 ？你是谁 ？<br>
+           如何获得PowerBI ？<br>
+           如何在 PowerBI 中使用数据 ？
            </p>
     </div>
 
@@ -51,28 +53,29 @@
          <ul>
               <li>提高效率</li>
               <li>降低成本</li>
-              <li>云BI，嵌入式分析</li>
               <li>发布、共享与协作</li>
          </ul>
     </div>
 
     <div id="step-2" class="step" data-x="420" data-y="-70" data-z="-250" data-rotate-z="45" data-rotate-y="-45" data-rotate-order="zyx">
-      <figure> <p>使用 Power BI <br>简化你的工作<br>提高你的工作效率</p>
-        <img src="images/power-bi-data-overload.png" width=100% height=100% />
-      </figure>
+      <p>有哪些角色 ？你是谁</p>
+      <ul>
+           <li>看报告、看图表的</li>
+           <li>做数据建模、设计图表、创建报表的</li>
+           <li>做嵌入式图表、维护数据和账号管理的</li>
+      </ul>
     </div>
 
     <div id="step-3" class="step" data-x="700" data-y="350" data-z="-350" data-rotate-z="90" data-rotate-y="-90" data-rotate-order="zyx">
-        <p>使用者</p>
+        <p>客户、老板</p>
         <ul>
              <li>在浏览器上使用 Power BI 服务</li>
              <li>浏览报表</li>
-             <li>筛选、保存与共享</li>
         </ul>
     </div>
 
     <div id="step-4" class="step" data-x="422" data-y="780" data-z="-250" data-rotate-z="135" data-rotate-y="-135" data-rotate-order="zyx">
-        <p>数据科学家或设计人员</p>
+        <p>数据分析师、咨询师、产品设计</p>
         <ul>
             <li>在本地使用 Power BI Desktop 进行数据建模</li>
             <li>设计报表与发布</li>
@@ -80,7 +83,7 @@
     </div>
 
     <div id="step-5" class="step" data-x="0" data-y="702" data-z="0" data-rotate-z="180" data-rotate-y="-180" data-rotate-order="zyx">
-        <p>开发人员</p>
+        <p>DBA，前后端开发和运维</p>
         <ul>
           <li>使用 Azure 云服务平台 管理用户和数据</li>
           <li>使用 PowerBI Embedded 嵌入图表</li>
@@ -90,9 +93,9 @@
     <div id="step-6" class="step" data-x="379" data-y="780" data-z="270" data-rotate-z="135" data-rotate-y="-225" data-rotate-order="zyx">
         <p>简单演示</p>
         <ul>
-          <li>使用者</li>
-          <li>数据科学家或设计人员</li>
-          <li>开发人员</li>
+          <li>下载与安装</li>
+          <li>账号分配</li>
+          <li>数据加载，报表创建与发布，导出PPT</li>
         </ul>
     </div>
 
