--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
          data-goto-next="step-1">
          <p>下一次培训相关内容</p>
          <ul>
-              <li>如何获取数据</li>
+              <li>上期疑问解答</li>
               <li>进行数据建模</li>
               <li>运用视觉对象</li>
               <li>发布和共享</li>
